--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "serial"
   ],
   "dependencies": {
-    "serialport": "git+https://github.com/sdesalas/node-serialport-omega2.git"
+    "serialport": "github:sdesalas/node-serialport-omega2"
   },
   "author": "Steven de Salas",
   "license": "MIT",
